test: implementing tests in the repository
